CB-28587 refactor Flow Chain graph generation for most effective use during unit tests, graph generation for main operations on UT side