@@ -2,11 +2,14 @@ package com.sequenceiq.flow.graph;
 
 import java.io.File;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
 public class GraphDescriptorFileWriter {
+    private static final Logger LOGGER = LoggerFactory.getLogger(GraphDescriptorFileWriter.class);
 
     private GraphDescriptorFileWriter() {
     }
@@ -19,6 +22,8 @@ public class GraphDescriptorFileWriter {
                 throw new IOException("Unable to create directories: " + destinationDir.getAbsolutePath());
             }
         }
-        Files.write(Paths.get(String.format("%s/%s.dot", destinationDirectory, fileName)), content.getBytes(StandardCharsets.UTF_8));
+        String outFile = String.format("%s/%s.dot", destinationDirectory, fileName);
+        LOGGER.info("Saving file: {}", outFile);
+        Files.writeString(Paths.get(outFile), content);
     }
 }
